# mcp-molecules

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  TODO.txt  databases.txt  glama.json  pyproject.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/mcp_molecules/: __init__.py  __main__.py  cache.py  formula.py  isotopes.py  jsonfix.py  names.py  naming.py  remote.py  server.py  weights.py
src/mcp_molecules/data/: names_pubchem.db  nist_atomic_weights.json
tests/: conftest.py  test_cache_remote.py  test_compound_lookup_functional.py  test_functional_epa.py  test_functional_pubchem.py  test_functional_wikidata.py  test_isotopes_functional.py  test_jsonfix.py  test_mwc_functional.py  test_names.py  test_remote_failsoft.py  test_server.py
tools/: build_namedb.py  curate.py  fetch_pubchem.py  fetch_wikidata.py  name_filter.py  verify_names.py
